fixes #8 : - Remove hero unit on content div - use list with custom style to avoid weird spacing when empty items

--- a/episodesmanager-web/src/main/webapp/css/episodesManager.css
+++ b/episodesmanager-web/src/main/webapp/css/episodesManager.css
@@ -25,6 +25,7 @@ dt, dd{
 }
 
 .enum-right{
+    max-width:900px;
     margin-left:20px;
     margin-top:10px;
     margin-bottom:10px;
